--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.jcnc</groupId>
@@ -16,6 +16,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.7</maven.compiler.source>
     <maven.compiler.target>1.7</maven.compiler.target>
+    <profiles.dir>src/profiles</profiles.dir>
   </properties>
 
   <dependencies>
@@ -25,6 +26,7 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+
     <!-- spring配置 -->
     <dependency>
       <groupId>org.springframework</groupId>
@@ -38,6 +40,11 @@
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
+      <artifactId>spring-context-support</artifactId>
+      <version>4.1.7.RELEASE</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
       <artifactId>spring-web</artifactId>
       <version>4.1.7.RELEASE</version>
     </dependency>
@@ -46,7 +53,60 @@
       <artifactId>spring-jdbc</artifactId>
       <version>4.1.7.RELEASE</version>
     </dependency>
+    <dependency>
+      <groupId>org.aspectj</groupId>
+      <artifactId>aspectjweaver</artifactId>
+      <version>1.7.4</version>
+    </dependency>
     <!-- spring配置 -->
+
+    <!-- mybatis -->
+    <dependency>
+      <groupId>org.mybatis.generator</groupId>
+      <artifactId>mybatis-generator-core</artifactId>
+      <version>1.3.2</version>
+    </dependency>
+    <dependency>
+      <groupId>org.mybatis</groupId>
+      <artifactId>mybatis</artifactId>
+      <version>3.2.7</version>
+    </dependency>
+    <dependency>
+      <groupId>org.mybatis</groupId>
+      <artifactId>mybatis-spring</artifactId>
+      <version>1.2.2</version>
+    </dependency>
+    <!-- mybatis -->
+
+    <!-- db -->
+    <dependency>
+      <groupId>com.alibaba</groupId>
+      <artifactId>druid</artifactId>
+      <version>1.0.1</version>
+    </dependency>
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>5.1.21</version>
+    </dependency>
+    <!-- db -->
+
+    <!-- google jars -->
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.2.4</version>
+    </dependency>
+    <!-- google jars -->
+
+    <!-- apache -->
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.1</version>
+    </dependency>
+    <!-- apache -->
+
 
     <!--lombok-->
     <dependency>
@@ -79,7 +139,7 @@
   </dependencies>
 
   <build>
-    <finalName>wei-web</finalName>
+    <finalName>jcnc-web</finalName>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -93,5 +153,54 @@
       </plugin>
     </plugins>
   </build>
+
+  <profiles>
+    <profile>
+      <id>dev</id>
+      <build>
+        <resources>
+          <resource>
+            <directory>src/main/resources</directory>
+            <includes>
+              <include>**/*.xml</include>
+              <include>**/*.properties</include>
+              <include>**/*.xls</include>
+              <include>**/*.xlsx</include>
+            </includes>
+            <excludes>
+              <exclude>**/mbg/*</exclude>
+            </excludes>
+          </resource>
+          <resource>
+            <directory>${profiles.dir}/dev</directory>
+          </resource>
+        </resources>
+      </build>
+    </profile>
+
+    <profile>
+      <id>prod</id>
+      <build>
+        <resources>
+          <resource>
+            <directory>src/main/resources</directory>
+            <includes>
+              <include>**/*.xml</include>
+              <include>**/*.properties</include>
+              <include>**/*.xls</include>
+              <include>**/*.xlsx</include>
+            </includes>
+            <excludes>
+              <exclude>**/mbg/*</exclude>
+            </excludes>
+          </resource>
+          <resource>
+            <directory>${profiles.dir}/prod</directory>
+          </resource>
+        </resources>
+      </build>
+    </profile>
+  </profiles>
+
 
 </project>
