--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,12 @@
       <artifactId>mybatis-spring</artifactId>
       <version>1.2.2</version>
     </dependency>
+    <!-- 分页拦截 -->
+    <dependency>
+      <groupId>com.github.pagehelper</groupId>
+      <artifactId>pagehelper</artifactId>
+      <version>3.3.1</version>
+    </dependency>
     <!-- mybatis -->
 
     <!-- db -->
