--- a/src/profiles/dev/db.properties
+++ b/src/profiles/dev/db.properties
@@ -1,4 +1,4 @@
 jdbc.driver=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://127.0.0.1:3306/jcnc?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
-jdbc.user=admin
-jdbc.password=password
+jdbc.user=root
+jdbc.password=root
