--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -59,7 +59,7 @@
   </filter-mapping>
 
   <welcome-file-list>
-    <welcome-file>/WEB-INF/views/mainmenu/index.jsp</welcome-file>
+    <welcome-file>/WEB-INF/index.jsp</welcome-file>
   </welcome-file-list>
 
 </web-app>
