访客留言信息,及发送短信

--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,19 @@
     </dependency>
     <!-- db -->
 
+    <!-- 阿里云短信 -->
+    <dependency>
+      <groupId>com.aliyun</groupId>
+      <artifactId>aliyun-java-sdk-core</artifactId>
+      <version>3.7.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.aliyun</groupId>
+      <artifactId>aliyun-java-sdk-ecs</artifactId>
+      <version>4.11.0</version>
+    </dependency>
+    <!-- 阿里云短信 -->
+
     <!-- google jars -->
     <dependency>
       <groupId>com.google.code.gson</groupId>
@@ -130,6 +143,24 @@
       <version>1.16.18</version>
     </dependency>
 
+    <!-- 日志 -->
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-core</artifactId>
+      <version>1.1.7</version>
+    </dependency>
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+      <version>1.1.7</version>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>1.7.7</version>
+    </dependency>
+    <!-- 日志 -->
+
     <!-- jsp标签 -->
     <dependency>
       <groupId>jstl</groupId>
@@ -156,6 +187,7 @@
       <scope>provided</scope>
     </dependency>
     <!-- servlet -->
+
   </dependencies>
 
   <build>
