--- a/pom.xml
+++ b/pom.xml
@@ -134,11 +134,21 @@
       <artifactId>commons-io</artifactId>
       <version>2.3</version>
     </dependency>
+    <dependency>
+      <groupId>commons-collections</groupId>
+      <artifactId>commons-collections</artifactId>
+      <version>3.2.1</version>
+    </dependency>
     <!-- apache -->
     <!-- shiro -->
     <dependency>
       <groupId>org.apache.shiro</groupId>
-      <artifactId>shiro-core</artifactId>
+      <artifactId>shiro-spring</artifactId>
+      <version>1.2.3</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.shiro</groupId>
+      <artifactId>shiro-quartz</artifactId>
       <version>1.2.3</version>
     </dependency>
     <!-- shiro -->
