--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -24,6 +24,21 @@
     <param-value>classpath:applicationContext.xml</param-value>
   </context-param>
 
+  <!--springMVC 配置-->
+  <servlet>
+    <servlet-name>springMVC</servlet-name>
+    <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+    <init-param>
+      <param-name>contextConfigLocation</param-name>
+      <param-value>classpath:spring-mvc.xml</param-value>
+    </init-param>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>springMVC</servlet-name>
+    <!-- 此处可以可以配置成*.do，对应struts的后缀习惯 -->
+    <url-pattern>*.do</url-pattern>
+  </servlet-mapping>
+
   <!-- shiro 安全过滤器开始 -->
   <filter>
     <filter-name>shiroFilter</filter-name>
@@ -42,21 +57,6 @@
     <dispatcher>REQUEST</dispatcher>
   </filter-mapping>
   <!-- shiro 安全过滤器结束 -->
-
-  <!--springMVC 配置-->
-  <servlet>
-    <servlet-name>springMVC</servlet-name>
-    <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-    <init-param>
-      <param-name>contextConfigLocation</param-name>
-      <param-value>classpath:spring-mvc.xml</param-value>
-    </init-param>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>springMVC</servlet-name>
-    <!-- 此处可以可以配置成*.do，对应struts的后缀习惯 -->
-    <url-pattern>*.do</url-pattern>
-  </servlet-mapping>
 
   <!--指定编码-->
   <filter>
@@ -78,7 +78,7 @@
   </filter-mapping>
 
   <welcome-file-list>
-    <welcome-file>/WEB-INF/index.jsp</welcome-file>
+    <welcome-file>index.jsp</welcome-file>
   </welcome-file-list>
 
 </web-app>
