--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -92,4 +92,11 @@
     <welcome-file>index.jsp</welcome-file>
   </welcome-file-list>
 
+  <jsp-config>
+    <!-- 配置标签库 -->
+    <taglib>
+      <taglib-uri>/WEB-INF/au</taglib-uri>
+      <taglib-location>/WEB-INF/tlds/jcnc.tld</taglib-location>
+    </taglib>
+  </jsp-config>
 </web-app>
