--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,7 +1,4 @@
-<!DOCTYPE web-app PUBLIC
-        "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
-        "http://java.sun.com/dtd/web-app_2_3.dtd" >
-
+<?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns="http://java.sun.com/xml/ns/javaee"
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
@@ -95,7 +92,7 @@
   <jsp-config>
     <!-- 配置标签库 -->
     <taglib>
-      <taglib-uri>/WEB-INF/au</taglib-uri>
+      <taglib-uri>/WEB-INF/jcnc</taglib-uri>
       <taglib-location>/WEB-INF/tlds/jcnc.tld</taglib-location>
     </taglib>
   </jsp-config>
